<resources>
    <string name="app_name">MoblieOfficing</string>
    <string name="appname_manifest">MoblieOfficing</string>
    <!-- 文件管理 使用的字段 -->
    <string name="my_disk">我的网盘</string>
    <string name="my_file">个人文件</string>
    <string name="shared_file">群文件</string>
    <string name="edit">编辑</string>
    <string name="newfolder">新建文件夹</string>
    <string name="allselect">全选</string>
    <string name="allnoneselect">取消全选</string>
    <string name="move">移动</string>
    <string name="delete">删除</string>
    <string name="rename">重命名</string>
    <string name="system_file">系统文件</string>
    <string name="folder">文件夹</string>
    <string name="move_to_dir">移动至当前目录</string>
    <string name="select_target_dir">请选择目标目录</string>

    <string name="shareto">发送给联系人</string>

    <string name="back_button">返回</string>
    <string name="complete">完成</string>
    <string name="upload">上传</string>
    <string name="upload_selectfile">选择要上传文件</string>
    <string name="fm_group_head">用户加入群组</string>
    <string name="user_not_have_group">用户暂未加入群组</string>

    <!--Login 使用字段 -->
    <string name="login">登  录</string>
    <string name="link_sign_up">注册账号</string>
    <string name="link_forget_password">忘记密码</string>
    <string name="sign_up">立即注册</string>
    <string name="link_logon">立即已经创建账号,请注册注册</string>
    <string name="input_password">请输入密码</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_vercode">请输入验证码</string>

    <!--main 使用字段 -->
    <string name="message">消息</string>
    <string name="notice">公告</string>
    <string name="work">工作</string>
    <string name="contact">联系人</string>
    <string name="my">我的</string>

    <!--contact 使用字段 -->
    <string name="gsonFriends">好友</string>
    <string name="add_friend">添加好友</string>
    <string name="group">我的群组</string>
    <string name="create_group">创建群</string>
    <string name="personal_contact">手机通讯录</string>
    <string name="public_contact">公共通讯录</string>
    <string name="search_by_phone">通过手机号搜索</string>
    <string name="add_by_contact">通过手机通讯录添加</string>
    <string name="input_group_name">输入群名称</string>
    <string name="commit">提交</string>
    <string name="confirm">确定</string>
    <string name="frequently_friend">常用联系人</string>

    <!--notice 使用字段 -->
    <string name="send_notice">发公告</string>
    <string name="send">发送</string>
    <string name="notice_title">公告标题</string>
    <string name="author">作者</string>
    <string name="notice_content">公告内容</string>
    <string name="read">已读</string>
    <string name="unread">未读</string>
    <string name="press_back_again_to_exit">再按一次退出</string>

    <!--work 使用字段 -->
    <string name="office_management">内勤管理</string>
    <string name="report">业务汇报</string>
    <string name="office_communication">办公通讯</string>
    <string name="sign_in">考勤打卡</string>
    <string name="leave">请假</string>
    <string name="go_out">外出</string>
    <string name="business_trip">出差</string>
    <string name="work_overtime">加班</string>
    <string name="day_report">日报</string>
    <string name="week_report">周报</string>
    <string name="month_report">月报</string>
    <string name="video_meeting">视频会议</string>
    <string name="cloud_disk">云盘</string>
    <string name="please_input">请填写文字</string>
    <string name="work_finish">已完成的工作:</string>
    <string name="work_unfinsh">未完成的工作:</string>
    <string name="work_concert">需协调的工作:</string>
    <string name="send_to">发给谁</string>
    <string name="ps">备注</string>
    <string name="add_people">添加人员</string>

    <!--内外勤管理使用字段-->
    <string name="leavetype">请假类型</string>
    <string name="travel_location">出差地点</string>
    <string name="travel_location_hint">如：北京、上海、广州(必填)</string>
    <string name="startdate">开始日期</string>
    <string name="starttime">开始时间</string>
    <string name="enddate">结束日期</string>
    <string name="endtime">结束时间</string>
    <string name="duration">时长(天)</string>
    <string name="leave_reason">请假事由</string>
    <string name="leave_reason_hint">请填写请假事由(必填)</string>
    <string name="goout_reason">外出事由</string>
    <string name="goout_reason_hint">请填写外出事由(必填)</string>
    <string name="travel_reason">出差事由</string>
    <string name="travel_reason_hint">请填写出差事由(必填)</string>
    <string name="overtime_reason">加班事由</string>
    <string name="overtime_reason_hint">请填写加班事由(必填)</string>
    <string name="photo">图片</string>
    <string name="approver">审批人</string>

    <string name="thing_leave">事假</string>
    <string name="year_leave">年假</string>
    <string name="change_rest">调休</string>
    <string name="sick_leave">病假</string>
    <string name="marriage_leave">婚假</string>
    <string name="maternity_leave">产假</string>
    <string name="official_leave">例假</string>
    <string name="funeral_leave">丧假</string>


    <!--userInfo-->
    <string name="user_info"> 个人信息</string>
    <string name="qr_code">二维码名片</string>
    <string name="change_password">修改密码</string>
    <string name="sign_out">退出登录</string>
    <string name="setting">设置</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
