<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.r2.scau.moblieofficing.activity.ReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tv_report_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_finish"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_report_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input"
                android:theme="@style/MyEditText"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@drawable/cursor"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tv_report_unfinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_unfinsh"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_report_unfinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditText"
                android:hint="@string/please_input"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@drawable/cursor"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tv_report_concert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_concert"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_report_concert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditText"
                android:hint="@string/please_input"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@drawable/cursor"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray"/>

        <EditText
            android:id="@+id/et_report_ps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:theme="@style/MyEditText"
            android:hint="@string/ps"
            android:minLines="3"
            android:textCursorDrawable="@drawable/cursor"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/send_to"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/grid_recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray"/>

        <Button
            android:id="@+id/btn_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/colorWhite"
            android:theme="@style/MyButton"
            android:text="@string/commit"
            />

    </LinearLayout>


</ScrollView>
