<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <include layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorGray"/>

    <RelativeLayout
        android:id="@+id/layout_user_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:scaleType="centerCrop"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_user_photo"
            android:text="名字"/>

        <TextView
            android:id="@+id/tv_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_alignLeft="@+id/tv_user_name"
            android:layout_below="@+id/tv_user_name"
            android:text="15521158459"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorGray"/>

    <com.allen.library.SuperTextView
        android:id="@+id/st_user_info"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:sLeftIconRes="@mipmap/ic_friend"
        app:sLeftTextString="@string/user_info"
        app:sUseRipple="true"
        >
    </com.allen.library.SuperTextView>

    <com.allen.library.SuperTextView
        android:id="@+id/st_qr_code"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        app:sLeftIconRes="@mipmap/ic_friend"
        app:sLeftTextString="@string/qr_code"
        app:sUseRipple="true"
        >
    </com.allen.library.SuperTextView>

    <com.allen.library.SuperTextView
        android:id="@+id/st_cloud_disk"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:sLeftIconRes="@mipmap/ic_friend"
        app:sLeftTextString="@string/cloud_disk"
        app:sUseRipple="true"
        >
    </com.allen.library.SuperTextView>

    <com.allen.library.SuperTextView
        android:id="@+id/st_notice"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        app:sLeftIconRes="@mipmap/ic_friend"
        app:sLeftTextString="@string/notice"
        app:sUseRipple="true"
        >
    </com.allen.library.SuperTextView>

    <com.allen.library.SuperTextView
        android:id="@+id/st_setting"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:sLeftIconRes="@mipmap/ic_friend"
        app:sLeftTextString="@string/setting"
        app:sUseRipple="true"
        >
    </com.allen.library.SuperTextView>

</LinearLayout>